# autodog

./: LICENSE  README.md  pyproject.toml  setup.cfg
autodog/: __init__.py  app.py  chatgptengine.py  core.py  docengine.py  dummyengine.py  fortranast.py  fortrancode.py  gpt3engine.py  pycode.py
autodog/ast/: fortran.py
autodog/code/: fortran.py  python.py  utils.py
autodog/docmodel/: base.py  docstring.py  google.py  javadoc.py  numpy.py  restructuredtext.py
autodog/engine/: base.py  chatgpt.py  docengine.py  dummy.py
autodog/utils/: progress.py
test/: app.py  test.f90  test.py
test/fortran/: in.f90  out.f90  test.py
test/python/: in.py  out.py  test.py
