[metadata]
name = AutoDog
version = 0.0.1
description = An automatic documentation generator to document a specific segment of code
long_description = file: README.md
long_description_content_type = text/markdown
license = file: LICENSE
author = Tatsumasa Ishikawa
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    openai

[options.entry_points]
console_scripts =
    autodog = autodog.app:app